--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8090
-spring:
+spring: 
+  application: 
+   name: "loans"
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,12 +16,9 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-  config: 
-    import:
-     - "application_qa.yml"
-     - "application_prod.yml"
-  profiles: 
-    active:
-    - "prod"
+  config:
+    import: "optional:configserver:http://localhost:8071/"
+  profiles:
+    active: "prod"
     
 build.version: 3.0				
