--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,12 @@ spring:
     import: "optional:configserver:http://localhost:8071/"
   profiles:
     active: "prod"
+
+info: 
+  app: 
+    name:"cards" 
+    description:"Eazy Bank Cards Application"
+    version:"1.0.0"
     
 build.version: 3.0
 
@@ -28,3 +34,10 @@ management:
     web:
       exposure:
         include: "*"
+  info:
+    env:
+     enabled: true
+
+endpoints: 
+   shutdown: 
+      enabled: true 
